# Epitech-Tek2-YEP-Zappy

./: .gitignore  Main.cpp  Makefile  README.md  ReadME.md  robot.txt
.github/workflows/: glib_checker  zappy.yml
GUI/: CMakeLists.txt  Main.cpp  main.cpp
GUI/src/: Color.cpp  Color.hpp  Coordinates.cpp  Coordinates.hpp  Rasterization.cpp  Rasterization.hpp  Renderer.cpp  Renderer.hpp
GUI/src/Vector/: Vector.cpp  Vector.hpp
ai/: Makefile
ai/src/: app.lua  config.lua  look_parser.lua  main.lua  utils.lua
ai/src/classes/: zappy_ai.lua  zappy_commands_queue.lua  zappy_environment.lua  zappy_inventory.lua  zappy_logger.lua  zappy_params.lua  zappy_server.lua  zappy_tile.lua
ai/src/constants/: network_zappy_action.lua  network_zappy_answer.lua  terminal_color.lua
ai/src/enums/: network_tcp_status.lua  zappy_ai_command_status.lua  zappy_ai_status.lua  zappy_ai_task.lua
gui/: CMakeLists.txt  Client.cpp  Client.hpp  Gui.cpp  Gui.hpp  Parameters.hpp  Player.cpp  Player.hpp  Socket.cpp  Socket.hpp  Window.cpp  Window.hpp  main.cpp
gui/GUI/: Gui.cpp  Gui.hpp
gui/RayLib/: Camera3D.cpp  Camera3D.hpp  Raylib.cpp  Raylib.hpp
gui/RayLib/Camera/: Camera.cpp  Camera.hpp  Camera3D.cpp  Camera3D.hpp
gui/RayLib/Draw/: Cube.cpp  Cube.hpp  Draw.cpp  Draw.hpp  Grid.cpp  Grid.hpp  Rectangle.cpp  Rectangle.hpp  Text.cpp  Text.hpp
gui/RayLib/Event/: Event.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
gui/connection/: Client.cpp  Client.hpp  Sleep.cpp  Sleep.hpp  Socket.cpp  Socket.hpp
gui/player/: Player.cpp  Player.hpp
gui/src/: egg.cpp  egg.hpp
gui/src/Egg/: egg.cpp  egg.hpp
gui/src/setting/: SettingMenu.cpp  SettingMenu.hpp
gui/window/: Modal.cpp  Modal.hpp  Text.cpp  Text.hpp  Window.cpp  Window.hpp
server/: CMakeLists.txt
server/include/: angle_direction.h  coords.h  eggs.h  macros.h  responses.h  utilities.h  zappy_server.h
server/src/: main.c  zappy_server.c
server/src/include/: utilities.h
server/src/models/: map.h
server/src/modules/client/: client.c  client.h
server/src/modules/clients_manager/: client_manager_getters.c  clients_manager.c  clients_manager.h  clients_manager_getters.c
server/src/modules/clients_manager/helpers/: eggs.c  getters.c  team.c
server/src/modules/commands/: commands.h
server/src/modules/commands/ai/: ai_commands.h  broadcast.c  connect_nbr.c  eject.c  fork.c  forward.c  inventory.c  inventory.h  look.c  set.c  take.c  turn.c
server/src/modules/commands/ai/eject/: eject.c  eject.h
server/src/modules/commands/ai/incantation/: cancel.c  incantation.c  incantation.h  initiate.c  start.c
server/src/modules/commands/ai/incantation/helpers/: player.c  resource.c
server/src/modules/commands/ai/look/: look.c  look.h  look_directions.c  look_fill_buffer.c
server/src/modules/commands/gui/: bct.c  gui_commands.h  mct.c  msz.c
server/src/modules/commands/gui/events/: ebo.c  edi.c  enw.c  mct_event.c  pbc.c  pdi.c  pdr.c  pex.c  pfk.c  pgt.c  pic.c  pie.c  pin_event.c  plv.c  plv_event.c  pnw.c  ppo_event.c  sbp.c  seg.c  smg.c
server/src/modules/commands/gui/handlers/: bct.c  enw_handler.c  mct.c  msz.c  pin.c  plv.c  ppo.c  sgt.c  sst.c  tna.c
server/src/modules/egg/: egg.h
server/src/modules/logs/: logs.h  logs_colors.h
server/src/modules/logs/failures/: logs_failures.h  request_failures_logs.c  request_logs.c  team_failures_logs.c
server/src/modules/logs/failures/gui_handlers/: sst_failure.c
server/src/modules/logs/successes/: logs_successes.h  network_logs.c  network_successes_logs.c  team_successes_logs.c
server/src/modules/logs/successes/events/: broadcast_success.c  fork_success.c  forward_success.c  look_success.c  pdi_success.c  set_success.c  take_success.c  turn_success.c
server/src/modules/logs/successes/gui_handlers/: ppo_success.c  sgt_success.c  sst_success.c  tna_success.c
server/src/modules/map/: map.c  map.h
server/src/modules/map/helpers/: resource.c
server/src/modules/network/: network.c  network.h
server/src/modules/network/endpoint/: endpoint.c  endpoint.h
server/src/modules/options/: options.c  options.h  usage.c
server/src/modules/options/parsers/: clients.c  frequency.c  port.c  teams.c  unknown.c  usage.c  world_height.c  world_width.c
server/src/modules/player/: player.c  player.h  player_methods.h  player_utilities.h
server/src/modules/requests_manager/: requests_manager.c  requests_manager.h
server/src/modules/resource/: resource.h
server/src/modules/resource/utilities/: compute_quantities.c
server/src/modules/server/: server.c  server.h
server/src/modules/updater/: command_updater.c  updater.c  updater.h
server/src/utilities/: usage.c
server/src/utilities/network/: send_string.c
server/src/utilities/numbers/: str_to_num.c  str_to_port.c
server/src/utilities/signals/: catch_signal.c
server/src/utilities/strings/: free_double_tab.c  remove_newline.c  str_array_split.c
server/src/utilities/time/: mstime.c
